Fix: Icon position on mobile devices is always on top (#10708, #3040)

--- a/assets/dev/scss/frontend/widgets/icon-box.scss
+++ b/assets/dev/scss/frontend/widgets/icon-box.scss
@@ -3,7 +3,7 @@
 //
 .elementor-widget-icon-box {
 
-	@media (min-width: $screen-md-min) {
+		// Fix for: Icon position on mobile devices is always on top (#10708, #3040)
 
 		&.elementor-position- {
 
@@ -67,17 +67,6 @@
 				}
 			}
 		}
-	}
-
-	@media (max-width: $screen-sm-max) {
-
-		// TEMP code to override the icon spacing
-		.elementor-icon-box-icon {
-			margin-left: auto !important;
-			margin-right: auto !important;
-			margin-bottom: 15px;
-		}
-	}
 
 	.elementor-icon-box-wrapper {
 		text-align: center;
